[package]
name = "catus-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "catus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ort with download-binaries fetches the correct matching ONNX Runtime DLL at build time,
# bypassing the stale v1.17 system DLL in C:\Windows\System32.
ort = { version = "2.0.0-rc.8", features = ["download-binaries", "copy-dylibs", "half", "ndarray"] }
hound = "3.5.1"
rodio = { version = "0.22.1", default-features = false, features = ["wav"] }
ndarray = "0.16"
