[package]
name = "catus-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "catus-desktop"

[lib]
name = "catus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ort 2.0.0-rc.10 = ORT 1.22 bindings.
# We use ORT 1.21.0 DLL (backward compat — same C API).
# load-dynamic: dlopen onnxruntime.dll at runtime via ORT_DYLIB_PATH env var.
# No download-binaries: avoids static MSVC compilation issues.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }

# ndarray 0.16 — matches what ort rc.10 uses
ndarray = "0.16"

# WAV encoding
hound = "3.5.1"

# voices.npz parsing (numpy zip format)
zip = "2"
